Shang New Live/src/objects/POS_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GTO_Amount__c</fullName>
        <inlineHelpText>GTO Amount</inlineHelpText>
        <label>GTO</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_POS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease POS</label>
        <referenceTo>Lease_POS__c</referenceTo>
        <relationshipLabel>POS Transaction</relationshipLabel>
        <relationshipName>POS_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Unit</label>
        <referenceTo>Lease_Unit__c</referenceTo>
        <relationshipName>POS_Monthly_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox should be checked when User enters POS data manually from Rent Schedule record.</inlineHelpText>
        <label>Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POS_Id__c</fullName>
        <inlineHelpText>Please do not enter POS ID while creating transaction entry manually.</inlineHelpText>
        <label>POS Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <label>Property Short Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>POS_Monthly_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rent_Schedule__c</fullName>
        <label>Rent Schedule</label>
        <referenceTo>Rent_Schedules__c</referenceTo>
        <relationshipLabel>POS Transaction</relationshipLabel>
        <relationshipName>Monthly_Transaction_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <formula>Lease_Unit__r.Tenant__c</formula>
        <label>Tenant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_No__c</fullName>
        <formula>Lease_Unit__r.Unit__r.Name</formula>
        <label>Unit No.</label>
        <type>Text</type>
    </fields>
    <label>POS Transaction</label>
    <listViews>
        <fullName>Junction_Maw_Tin_Monthly_POS_Transaction</fullName>
        <columns>Property__c</columns>
        <columns>Unit_No__c</columns>
        <columns>Tenant__c</columns>
        <columns>Lease_Unit__c</columns>
        <columns>Rent_Schedule__c</columns>
        <columns>GTO_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>Junction Maw Tin Monthly POS Transaction</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{yyyy}-{MM}-ST-{00000000}</displayFormat>
        <label>POS Transaction No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>